--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -6,6 +6,7 @@
     margin-bottom: 15px;
     border-radius: 9px;
     background-color: rgba(5, 0, 0, 0.1);
+    min-height: 310px;
 }
 .snack-card-shadow{
     box-shadow: 0 2px 30px 0 rgb(0 0 0 / 20%);
