--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -5,7 +5,7 @@
     max-width: 760px;
     margin-bottom: 15px;
     border-radius: 9px;
-    background-color: rgba(5, 0, 0, 0.1);
+    background-image: radial-gradient(50% 99%, rgba(255,255,255,0.26) 0%, rgba(46,196,182,0.00) 100%);
     min-height: 310px;
 }
 .snack-card-shadow{
@@ -52,4 +52,70 @@
 
 .grad-did0001{
     background-image: linear-gradient(134deg, #2DC4B6 0%, #152755 100%);
+}
+
+/**
+ * Fonts
+ */
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 100;
+    font-display: swap;
+    src: url(/fonts/GraphikThin.otf) format("opentype");
+}
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url(/fonts/GraphikExtralight.otf) format("opentype");
+}
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(/fonts/GraphikLight.otf) format("opentype");
+}
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/fonts/GraphikRegular.otf) format("opentype");
+}
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(/fonts/GraphikMedium.otf) format("opentype");
+}
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url(/fonts/GraphikSemibold.otf) format("opentype");
+}
+
+/**
+* Typography
+*/
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    color: white;
+    line-height: 20px;
+    position: relative;
+    margin: 0;
+    background: black !important;
 }
