--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,11 +1,10 @@
-
 .snack-card {
     overflow: hidden;
     height: auto;
-    max-width: 760px;
+    max-width: 760px !important;
     margin-bottom: 15px;
     border-radius: 9px;
-    background-image: radial-gradient(50% 99%, rgba(255,255,255,0.26) 0%, rgba(46,196,182,0.00) 100%);
+    background-image: radial-gradient(50% 99% at 0 0, rgba(255,255,255,0.26) 0%, rgba(46,196,182,0.00) 100%);
     min-height: 310px;
 }
 .snack-card-shadow{
@@ -118,4 +117,5 @@ body {
     position: relative;
     margin: 0;
     background: black !important;
+    letter-spacing: -0,1;
 }
