--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -20,7 +20,6 @@
     width: 100%;
     font-size: 25px;
     font-weight: 600;
-    line-height: 1.5;
     top: 20px;
 }
 
@@ -48,7 +47,6 @@
 .snack-card-bg-items-content > * {
     position: absolute;
     left: 0%;
-    width: 100%;
     opacity: 0.17;
 }
 
@@ -123,9 +121,22 @@
     min-height: 30%;
 }
 
-
+/* Gradients */
 .grad-did0001{
     background-image: linear-gradient(134deg, #2DC4B6 0%, #152755 100%);
+}
+.grad-did0019{
+    background-image: linear-gradient(90deg, rgba(255,252,242,0.00) 2%, #FFA600 100%);
+}
+
+/* Gradients content */
+.grad-did0001 > .snack-card-bg-items > .snack-card-bg-items-content > * {
+    width: 100%;
+}
+.grad-did0019 > .snack-card-content > * {
+    padding-left: 15%;
+    justify-content: start;
+    text-align: start;
 }
 
 /**
@@ -188,9 +199,56 @@ body {
 
 body {
     color: white;
-    line-height: 20px;
+    line-height: 1.5;
     position: relative;
     margin: 0;
     background: black !important;
     letter-spacing: -0,1;
+}
+
+/* Buttons */
+button.close {
+    padding: 0;
+    background-color: transparent;
+    border: 0;
+}
+
+.close {
+    transition: 0.3s;
+    float: right;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+}
+.close:hover {
+    color: #000;
+    text-decoration: none;
+}
+
+.modal-header .close {
+    padding: 1rem;
+    margin: -1rem -1rem -1rem auto;
+}
+
+.close:not(:disabled):not(.disabled):focus, .close:not(:disabled):not(.disabled):hover {
+    opacity: .75;
+}
+
+/* Modals */
+.modal-login {
+    border-radius: 5px !important;
+    background-color: #f5f5f4 !important;
+    -webkit-box-shadow: 0 0 50px rgb(24 24 24 / 50%);
+    box-shadow: 0 0 50px rgb(24 24 24 / 50%);
+    color: #4b4b4b;
+    width: auto;
+    max-width: 420px;
+    min-width: 280px;
+    padding: .5rem;
+    min-height: 100px;
+    max-height: 80vh;
+    border: 20px solid #db2529 !important;
 }
