--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -15,6 +15,49 @@
     position: relative;
 }
 
+.base, .mood, .data {
+    min-height: 310px;
+}
+
+.btn img{
+    transition: 0.5s;
+}
+
+.not-collapsed img {
+    transform: rotate(-180deg);
+}
+
+.expanded .content {
+    min-height: 200px;
+    background-color: rgb(0 0 0 / 5%);
+    padding: 15%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 12px;
+}
+
+.expanded .content .b-rating.disabled {
+    background-color: transparent;
+    color: #2ec4b6;
+    border: 0;
+}
+
+.expanded .content .review-tags .tags-title{
+    font-size: 8px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    margin-right: 10px;
+    line-height: 22px;
+}
+
+.expanded .content .review-tags .tag{
+    text-transform: lowercase;
+    font-size: 8px;
+    line-height: 20px;
+    padding: 2px 8px !important;
+    margin-top: 3px !important;
+}
+
 .snack-card-title {
     position: absolute;
     width: 100%;
@@ -135,8 +178,50 @@
 }
 .grad-did0019 > .snack-card-content > * {
     padding-left: 15%;
+    padding-right: 15%;
     justify-content: start;
     text-align: start;
+}
+
+.grad-did0019 .first-section {
+    min-height: 78px;
+} 
+
+.grad-did0019 .second-section {
+    font-size: 12px;
+    min-height: 154px;
+} 
+
+.grad-did0019 .third-section {
+    font-size: 9px;
+    padding: 0;
+    min-height: 48px;
+    margin-top: auto;
+} 
+
+.grad-did0019 .review-user .b-rating.disabled {
+    background-color: transparent;
+    color: white;
+    border: 0;
+}
+.grad-did0019 .review-user .b-rating-star-empty {
+    color: black;
+    opacity: 0.6;
+}
+
+.timestamp{
+    margin-left: auto;
+}
+
+.more-info{
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.no-button{
+    background: none !important;
+    border: 0 !important;
+    box-shadow: none !important;
 }
 
 /**
